[metadata]
name = AioActors

description=Simple abstractions for actor model based on asyncio
url=https://gitlab.itpc.ru/libs/python/aioactors
author=Igor Voropaev
author_email=snake@itpc.ru

long_description_content_type = text/markdown
platforms=
    linux

[options]
packages=find:
[options.packages.find]
exclude =
    tests

[coverage:run]
omit = tests/*
[coverage:report]
exclude_lines = 
    pragma: no cover
    def __repr__
    def __str__

[flake8]
max-line-length=135
exclude=
    __submodules__,
    .git
[mypy]
ignore_missing_imports = true
follow_imports = silent
cache_dir = /dev/null
